# piisa-services

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: export.sh
src/common/: common.requirements.txt  pyproject.toml
src/piisa-presidio/: Dockerfile  README.md  main.py  piisa-presidio.requirements.txt  pyproject.toml
src/piisa-transformers/: Dockerfile  README.md  main.py  piisa-transformers.requirements.txt  pyproject.toml
