[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Ian Yu <ian.yu@arc.com.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.11.0"
fastapi = "^0.104.1"
pii-preprocess = "^0.1.0"
pii-transform = "^0.5.1"
poethepoet = "^0.24.4"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
