[tool.poetry]
name = "piisa-presidio"
version = "0.1.0"
description = ""
authors = ["Ian Yu <ian.yu@arc.com.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "../common/", develop = false }

pii-extract-plg-regex = "^0.4.1"
pii-extract-plg-presidio = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs.in-project]
enabled = true

