[tool.poetry]
name = "piisa-transformers"
version = "0.1.0"
description = ""
authors = ["Ian Yu <ian.yu@arc.com.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "../common/", develop = true }
torch = "^2.1.1"
transformers = "^4.35.2"
pii-extract-plg-transformers = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
